# benchmark-fastapi

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
benchmark_fastapi/: async.py  db.py  models.py  schemas.py  sync.py
migrations/: env.py
migrations/versions/: ac9f84795a1a_init.py
scripts/: async.sh  benchmark.sh  setup.sh  sync.sh
